Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -8,18 +8,18 @@
       "description": "Genres: Action, Drama, Sci-Fi, Supernatural\nTags:Post-Apocalyptic/Cult/Super Power/Shounen/Demons/Religion/Dystopian/Lost Civilization/Primarily Adult Cast/Urban/Ensemble Cast/Male Protagonist/Firefighters/Gods/Urban Fantasy/Nun/Guns/Rescue\nThe third season of <i>Enen no Shouboutai</i>.<br><br>\nBranded as traitors, Shinra and Company 8 fight alone to save Obi and stop the Evangelist!<br><br>\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt29605391",
-      "type": "series",
-      "name": "WIND BREAKER Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178680-wxK48CkZn9yT.jpg",
-      "description": "Genres: Action, Comedy, Drama\nTags:Delinquents/Gangs/Shounen/Primarily Teen Cast/Male Protagonist/Urban/LGBTQ+ Themes/Transgender/Found Family\nThe second season of <i>WIND BREAKER</i>.<br><br>\n\nWelcome back to Furin High School, an institution infamous for its population of brawny brutes who solve every conflict with a show of strength. Some of the students even formed a group, Bofurin, which protects the town. Haruka Sakura, a first-year student who moved in from out of town, is only interested in one thing: fighting his way to the top! <br><br>\n\n(Source: Crunchyroll, edited)"
-    },
-    {
       "id": "tt28454008",
       "type": "series",
       "name": "Lazarus",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167336-hMpEKtKTemuJ.png",
       "description": "Genres: Action, Sci-Fi\nTags:Cyberpunk/Parkour/Urban/Medicine/Male Protagonist/Prison\nThe year is 2052 — an era of unprecedented peace and prosperity prevails across the globe. The reason for this: mankind has been freed from sickness and pain. Nobel Prize winning neuroscientist Dr. Skinner has developed a miracle cure-all drug with no apparent drawbacks called Hapuna. Hapuna soon becomes ubiquitous… and essential. However, soon after Hapuna is officially introduced, Dr. Skinner vanishes.\n<br><br>\nThree years later, the world has moved on. But Dr. Skinner has returned — this time, as a harbinger of doom. Skinner announces that Hapuna has a short half-life. Everyone who has taken it will die approximately three years later. Death is coming for this sinful world — and coming soon.\n<br><br>\nAs a response to this threat, a special task force of 5 agents is gathered from across the world to save humanity from Skinner’s plan. This group is called “Lazarus.” Can they find Skinner and develop a vaccine before time runs out?\n<br><br>\n<i>(Source: Adult Swim)</i>"
+    },
+    {
+      "id": "tt29605391",
+      "type": "series",
+      "name": "WIND BREAKER Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178680-wxK48CkZn9yT.jpg",
+      "description": "Genres: Action, Comedy, Drama\nTags:Delinquents/Gangs/Shounen/Primarily Teen Cast/Male Protagonist/Urban/LGBTQ+ Themes/Transgender/Found Family\nThe second season of <i>WIND BREAKER</i>.<br><br>\n\nWelcome back to Furin High School, an institution infamous for its population of brawny brutes who solve every conflict with a show of strength. Some of the students even formed a group, Bofurin, which protects the town. Haruka Sakura, a first-year student who moved in from out of town, is only interested in one thing: fighting his way to the top! <br><br>\n\n(Source: Crunchyroll, edited)"
     },
     {
       "id": "tt34119820",
@@ -61,7 +61,7 @@
       "type": "series",
       "name": "WITCH WATCH",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180367-GlRuB2lG7Kaa.jpg",
-      "description": "Genres: Comedy, Drama, Fantasy, Romance, Slice of Life\nTags:Magic/Witch/Shounen/Female Protagonist/Parody/Male Protagonist/Found Family/Heterosexual/Primarily Teen Cast/Urban Fantasy/Werewolf/Youkai\nMorihito Otogi, a high school student who comes from a lineage of ogres, enjoys a peaceful, ordinary life until his childhood friend, Nico, moves in with him. Nico is a witch-in-training, and chooses Morihito to be her familiar. While Nico is thrilled to reunite with her old friend and crush, Morihito is tasked with the perilous duty to protect her from a foretold calamity. Between the unpredictable chaos caused by Nico’s magic, and the awkwardness of sharing a home, their lives become a whirlwind of supernatural hijinks and threats.\n<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>WITCH WATCH: WATCH PARTY</b> before the Japanese premiere was pre-screened in advance in theaters on March 16, 2025 in North America by GKIDS Films and March 22 and 23 in Europe by Animation Digital Network. <br>\n- Episodes 1-2 + a selection of stories (Cat Scout, Kanshi's Part Time Job Diaries ~ The Side Job ~, and Kan & Nico's Channel) was pre-screened in advance in theaters on March 30, 2025 in Japan. The regular TV broadcast began April 6, 2025.</i>"
+      "description": "Genres: Comedy, Drama, Fantasy, Romance, Slice of Life\nTags:Magic/Witch/Shounen/Female Protagonist/Parody/Male Protagonist/Found Family/Heterosexual/Primarily Teen Cast/Urban Fantasy/Werewolf/Youkai/Cohabitation\nMorihito Otogi, a high school student who comes from a lineage of ogres, enjoys a peaceful, ordinary life until his childhood friend, Nico, moves in with him. Nico is a witch-in-training, and chooses Morihito to be her familiar. While Nico is thrilled to reunite with her old friend and crush, Morihito is tasked with the perilous duty to protect her from a foretold calamity. Between the unpredictable chaos caused by Nico’s magic, and the awkwardness of sharing a home, their lives become a whirlwind of supernatural hijinks and threats.\n<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>WITCH WATCH: WATCH PARTY</b> before the Japanese premiere was pre-screened in advance in theaters on March 16, 2025 in North America by GKIDS Films and March 22 and 23 in Europe by Animation Digital Network. <br>\n- Episodes 1-2 + a selection of stories (Cat Scout, Kanshi's Part Time Job Diaries ~ The Side Job ~, and Kan & Nico's Channel) was pre-screened in advance in theaters on March 30, 2025 in Japan. The regular TV broadcast began April 6, 2025.</i>"
     },
     {
       "id": "tt16341212",
@@ -162,18 +162,18 @@
       "description": "Genres: Comedy, Ecchi, Fantasy, Romance\nTags:Elf/Tanned Skin/MILF/Yandere/Nudity/Large Breasts/Male Protagonist/Heterosexual/Isekai\nHinata did it. He got reincarnated into another world, took up the mantle of Hero, and slew the dreaded Demon Lord alongside his party of fellow adventurers. As his reward, he’s returned to Earth to resume a normal life. Or it would be if it wasn’t for the fact that his dark elf companion Mariabelle decided to travel to Earth to come and live with him! Now she uses her arcane talents to ward off any potential romantic rivals and capture Hinata’s affection. \n<BR><BR>\n(Source: Seven Seas Entertainment)"
     },
     {
-      "id": "tt32513973",
-      "type": "series",
-      "name": "Your Forma",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167142-dJwdHptpILkF.jpg",
-      "description": "Genres: Action, Drama, Mystery, Sci-Fi\nTags:Female Protagonist/Detective/Male Protagonist/Crime\nIn 1992, a pandemic of viral encephalitis shook the world. The medical technology that saved humanity evolved into <i>“Your Forma”</i>—an invasive information device implanted into the brain. In this world where every sight, sound, and even emotion is recorded, investigating major crimes means diving into the collective data, a job reserved for special detectives called “Electronic Investigator.”\n<br><br>\nEchika Hieda, a prodigious “Electronic Investigator” assigned at an astonishingly young age, stands isolated by her exceptional talent. Her newly assigned partner is Harold, a blonde, blue-eyed humanoid “Amicus.” Together, this unrivaled duo will expose every hidden secret.\n<br><br>\n(Source: \"It’s Anime\" YouTube Channel)"
-    },
-    {
       "id": "tt34814625",
       "type": "series",
       "name": "I'm the Evil Lord of an Intergalactic Empire!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183274-zqrwevS4PBJF.jpg",
       "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy, Mecha, Romance, Sci-Fi\nTags:Male Protagonist/Female Harem/Isekai/Space/Politics/Maids\nAfter a life of honesty left him betrayed, Liam is reborn into a vast interstellar empire with one goal: be the galaxy’s worst evil lord. But no matter how hard he tries to be a tyrant, his “wicked” plans keep backfiring into peace, prosperity, and adoring fans. Galactic chaos, magic, and mecha await in this hilariously misconstructed tale of a villain who can’t help but to impress.\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt32513973",
+      "type": "series",
+      "name": "Your Forma",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167142-dJwdHptpILkF.jpg",
+      "description": "Genres: Action, Drama, Mystery, Sci-Fi\nTags:Female Protagonist/Detective/Male Protagonist/Crime\nIn 1992, a pandemic of viral encephalitis shook the world. The medical technology that saved humanity evolved into <i>“Your Forma”</i>—an invasive information device implanted into the brain. In this world where every sight, sound, and even emotion is recorded, investigating major crimes means diving into the collective data, a job reserved for special detectives called “Electronic Investigator.”\n<br><br>\nEchika Hieda, a prodigious “Electronic Investigator” assigned at an astonishingly young age, stands isolated by her exceptional talent. Her newly assigned partner is Harold, a blonde, blue-eyed humanoid “Amicus.” Together, this unrivaled duo will expose every hidden secret.\n<br><br>\n(Source: \"It’s Anime\" YouTube Channel)"
     },
     {
       "id": "tt35436553",
@@ -204,18 +204,18 @@
       "description": "Genres: Comedy, Slice of Life\nTags:School Club/Photography/Cute Girls Doing Cute Things/Female Protagonist\nThe <i>mono</i> manga is centered around high school girls who belong to the Cinephoto Club, which is a combination photography club and video research club set around Kofu City, Yamanashi Prefecture. The girls go about their daily lives using cameras tied to kites, action cameras and even drones around the city and prefecture. <br><br> (Source: Crunchyroll News, edited)"
     },
     {
-      "id": "tt35437780",
-      "type": "series",
-      "name": "ZatsuTabi -That's Journey-",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165445-qwVP0w5NIaBW.jpg",
-      "description": "Genres: Adventure, Comedy, Drama, Slice of Life\nTags:Travel/Iyashikei/Female Protagonist/Drawing/Primarily Female Cast/Seinen\nWhen aspiring manga artist Chika’s storyboards get rejected, she ditches her desk for an adventure! Armed with a quirky social media poll, she sets off on a spontaneous journey of random crowdsourced destinations. From hilarious mishaps to heartwarming encounters, Chika discovers inspiration, friendship, and herself, one unpredictable stop at a time.<br><br>\n\n(Source: Crunchyroll)\n\n<br><br>\n<i>Note: Based on the real life travels of mangaka Chika Suzugamori.</i>"
-    },
-    {
       "id": "kitsu:49069",
       "type": "series",
       "name": "Lycoris Recoil: Friends are thieves of time.",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-NvVrmMxnDatB.jpg",
       "description": "Genres: Slice of Life\nTags:Restaurant/Cute Girls Doing Cute Things/Primarily Female Cast/Female Protagonist/Kuudere\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
+    },
+    {
+      "id": "tt35437780",
+      "type": "series",
+      "name": "ZatsuTabi -That's Journey-",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165445-qwVP0w5NIaBW.jpg",
+      "description": "Genres: Adventure, Comedy, Drama, Slice of Life\nTags:Travel/Iyashikei/Female Protagonist/Drawing/Primarily Female Cast/Seinen\nWhen aspiring manga artist Chika’s storyboards get rejected, she ditches her desk for an adventure! Armed with a quirky social media poll, she sets off on a spontaneous journey of random crowdsourced destinations. From hilarious mishaps to heartwarming encounters, Chika discovers inspiration, friendship, and herself, one unpredictable stop at a time.<br><br>\n\n(Source: Crunchyroll)\n\n<br><br>\n<i>Note: Based on the real life travels of mangaka Chika Suzugamori.</i>"
     },
     {
       "id": "tt35437675",
@@ -288,18 +288,18 @@
       "description": "Genres: Action, Fantasy\nTags:Isekai/Male Protagonist\nHumans fight to protect their land from invading demi-human tribes in relentless battles. As his world is engulfed by intense warfare, Kai, a village boy from Lag, joins the fight to defend all he knows. After Kai’s comrades fall one by one and he’s injured, he suddenly recalls memories from another life. A fantasy tale unfolds as a village boy explores a world of magic, mystery, and heroism.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt35351289",
-      "type": "series",
-      "name": "Maebashi Witches",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180825-trzjP1VDF19U.jpg",
-      "description": "Genres: Fantasy, Slice of Life\nTags:Witch/Primarily Female Cast/Idol/Coming of Age/Primarily Teen Cast/Female Protagonist\nThe anime's story, set in Maebashi City in Gunma Prefecture, is about the coming-of-age story of five high school girls. First year high school student Yuina Akagi lives an ordinary but unsatisfying everyday life. One day, a mysterious frog named Keroppe scouts her and four other girls to become the \"Maebashi Witches.\" Suddenly, a room closet is connected to a mysterious space that brings the girls to a magical flower shop where they sing, dance, and make other people's wishes come true.\n<br><br>\n(Source: ANN)"
-    },
-    {
       "id": "tt23844810",
       "type": "series",
       "name": "Bye Bye, Earth Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181078-zBCMinL0WhzA.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Female Protagonist/Swordplay/Kemonomimi/Magic/Gore/Classical Music/Philosophy/Heterosexual/War\nThe second season of <i>Bye Bye, Earth</i>.<br><br>\n\nAdonis returns, empowered by darkness, as Belle awakens from her slumber — their fates bound by an inescapable destiny.<br><br>\n\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt35351289",
+      "type": "series",
+      "name": "Maebashi Witches",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180825-trzjP1VDF19U.jpg",
+      "description": "Genres: Fantasy, Slice of Life\nTags:Witch/Primarily Female Cast/Idol/Coming of Age/Primarily Teen Cast/Female Protagonist\nThe anime's story, set in Maebashi City in Gunma Prefecture, is about the coming-of-age story of five high school girls. First year high school student Yuina Akagi lives an ordinary but unsatisfying everyday life. One day, a mysterious frog named Keroppe scouts her and four other girls to become the \"Maebashi Witches.\" Suddenly, a room closet is connected to a mysterious space that brings the girls to a magical flower shop where they sing, dance, and make other people's wishes come true.\n<br><br>\n(Source: ANN)"
     },
     {
       "id": "tt35437053",
@@ -316,18 +316,18 @@
       "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Food/Primarily Female Cast/Iyashikei\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
     },
     {
-      "id": "tt35994065",
-      "type": "series",
-      "name": "Catch Me at the Ballpark!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184279-dw02k4DPxwGz.png",
-      "description": "Genres: Comedy, Romance, Slice of Life, Sports\nTags:Seinen/Baseball/Gyaru/Heterosexual/Primarily Adult Cast\nTo escape his tiring job, weary Murata finds escape at a nearby baseball stadium. While the games are thrilling, it’s Ruriko, the gyaru as cold as the beer she serves but secretly a sweetheart, who keeps him coming back. As her first regular, Murata discovers the warmth behind her frosty demeanor, and their hilarious, heartwarming encounters light up the ballpark and maybe even their hearts.\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt4561040",
       "type": "series",
       "name": "The Gorilla God’s Go-To Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182060-r0ihNqhiyvpT.jpg",
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Male Harem/Female Protagonist/Shoujo\nSophia, a timid daughter of a count, just wanted a peaceful life, but the Gorilla God had other plans. Blessed with unmatched strength, she’s thrust into the Royal Knight Order, turning her quiet days into chaos. Now, she must juggle school, the knight life, and her overwhelming power. Who knew gorilla strength could be so complicated?<br><br>\n\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt35994065",
+      "type": "series",
+      "name": "Catch Me at the Ballpark!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184279-dw02k4DPxwGz.png",
+      "description": "Genres: Comedy, Romance, Slice of Life, Sports\nTags:Seinen/Baseball/Gyaru/Heterosexual/Primarily Adult Cast\nTo escape his tiring job, weary Murata finds escape at a nearby baseball stadium. While the games are thrilling, it’s Ruriko, the gyaru as cold as the beer she serves but secretly a sweetheart, who keeps him coming back. As her first regular, Murata discovers the warmth behind her frosty demeanor, and their hilarious, heartwarming encounters light up the ballpark and maybe even their hearts.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36156863",
