--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -127,6 +127,13 @@
       "description": "Genres: Drama, Mecha, Sci-Fi\nTags:Female Protagonist/Real Robot/Space/Cyberpunk/Robots/Super Robot/Fugitive\nAmate Yuzuriha is a high-school student living peacefully in a space colony floating in outer space.<br><br>\nWhen she meets a war refugee named Nyaan, Amate is drawn into the illegal mobile suit dueling sport known as Clan Battle.<br><br>\nUnder the entry name \"Machu,\" she throws herself into fierce battle day after day, piloting the GQuuuuuuX. Then an unidentified Gundam mobile suit pursued by both the space force and the police appears before her, along with its pilot, a boy named Shuji.<br><br>\nNow their world is about to enter a new era.<br><br>\n(Source: Official Site)<br><br>\n<i>Note: Prior to broadcasting, \"Mobile Suit Gundam GQuuuuuuX -Beginning-\" — a theatrical pre-screening of the first 3 episodes edited together— debuted in Japan on January 17, 2025 and in North America on February 28, 2025.</i>"
     },
     {
+      "id": "tt16741414",
+      "type": "series",
+      "name": "Summer Pockets",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143200-42OaDCS6VEy3.png",
+      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Rural/Male Protagonist/Coming of Age/Shrine Maiden/Kuudere/Fishing/Tsundere/Table Tennis/Swimming/Food\nTo help manage his recently deceased grandmother's effects, the protagonist Takahara Hairi travels to Torishirojima during his summer vacation.<br><br>\n\nAs he gets off the ferry boat, he spots a lone girl standing on the pier.<br><br>\n\nA girl who simply gazes into the distance as her long hair flutters in the wind.<br><br>\n\nHe looks at the girl in utter bewilderment, but before he realizes it, she can no longer be found anywhere.<br><br>\n\nHairi finds himself starting to adjust to life on this island, surrounded by nature far lusher than anything he has ever come across back in the city.<br><br>\n\nTime seems to flow by casually on this island, and as it does, memories of something nostalgic keep coming back to him...<br><br>\n\nMemories of something he had long forgotten.<br><br>\n\n(Source: Key)"
+    },
+    {
       "id": "tt30844357",
       "type": "series",
       "name": "SHOSHIMIN: How to become Ordinary Season 2",
@@ -134,11 +141,11 @@
       "description": "Genres: Mystery, Slice of Life\nTags:Detective\nThe second season of <i>Shoushimin Series.</i><br><br>\nThe second season will focus on two new cases from the novel series, adapting the two-part third volume Shuuki Gentei Kuri Kinton Jiken (The Autumn-Exclusive Kuri Kinton Case) and the fifth volume Touki Gentei Bonbon Chocolat Jiken (The Winter-Exclusive Chocolate Bonbons Case).<br><br>\n(Source: MyAnimeList)"
     },
     {
-      "id": "tt16741414",
+      "id": "tt34814625",
       "type": "series",
-      "name": "Summer Pockets",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143200-42OaDCS6VEy3.png",
-      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Rural/Male Protagonist/Coming of Age/Shrine Maiden/Kuudere/Fishing/Tsundere/Table Tennis/Swimming/Food\nTo help manage his recently deceased grandmother's effects, the protagonist Takahara Hairi travels to Torishirojima during his summer vacation.<br><br>\n\nAs he gets off the ferry boat, he spots a lone girl standing on the pier.<br><br>\n\nA girl who simply gazes into the distance as her long hair flutters in the wind.<br><br>\n\nHe looks at the girl in utter bewilderment, but before he realizes it, she can no longer be found anywhere.<br><br>\n\nHairi finds himself starting to adjust to life on this island, surrounded by nature far lusher than anything he has ever come across back in the city.<br><br>\n\nTime seems to flow by casually on this island, and as it does, memories of something nostalgic keep coming back to him...<br><br>\n\nMemories of something he had long forgotten.<br><br>\n\n(Source: Key)"
+      "name": "I'm the Evil Lord of an Intergalactic Empire!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183274-zqrwevS4PBJF.jpg",
+      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy, Mecha, Romance, Sci-Fi\nTags:Isekai/Politics/Male Protagonist/Female Harem/Space/Maids\nAfter a life of honesty left him betrayed, Liam is reborn into a vast interstellar empire with one goal: be the galaxy’s worst evil lord. But no matter how hard he tries to be a tyrant, his “wicked” plans keep backfiring into peace, prosperity, and adoring fans. Galactic chaos, magic, and mecha await in this hilariously misconstructed tale of a villain who can’t help but to impress.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt20672482",
@@ -153,13 +160,6 @@
       "name": "Black Butler: Emerald Witch Arc",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179054-HmN0Za4T157B.jpg",
       "description": "Genres: Action, Comedy, Fantasy, Mystery, Supernatural\nTags:Butler/Shounen/Male Protagonist\nSequel to <i>Kuroshitsuji: Kishuku Gakkou-hen.</i><br><br>\n\nCiel and his loyal butler Sebastian brave a cursed forest in Germany to uncover the truth behind eerie deaths.<br><br>\n\n(Source: Crunchyroll)"
-    },
-    {
-      "id": "tt34814625",
-      "type": "series",
-      "name": "I'm the Evil Lord of an Intergalactic Empire!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183274-zqrwevS4PBJF.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy, Mecha, Romance, Sci-Fi\nTags:Male Protagonist/Female Harem/Isekai/Space/Politics/Maids\nAfter a life of honesty left him betrayed, Liam is reborn into a vast interstellar empire with one goal: be the galaxy’s worst evil lord. But no matter how hard he tries to be a tyrant, his “wicked” plans keep backfiring into peace, prosperity, and adoring fans. Galactic chaos, magic, and mecha await in this hilariously misconstructed tale of a villain who can’t help but to impress.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt35437763",
@@ -225,18 +225,18 @@
       "description": "Genres: Drama, Slice of Life\nTags:Female Protagonist/Classic Literature/Rural/Coming of Age\nA new adaptation of <i> Akage no Anne (Anne of Green Gables).</i><br><br>\n\nOn the beautiful Prince Edward Island in Canada, an orphan named Anne Shirley is mistakenly sent to Green Gables, the home of Matthew and Marilla Cuthbert. They choose to adopt her anyway, as Anne finds friendship, love, and happiness in her new home. Come along for the story of a purehearted and imaginative girl growing up, leaving for college, and returning home a changed woman.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt35437675",
-      "type": "series",
-      "name": "Uma Musume: Cinderella Gray",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
-      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
-    },
-    {
       "id": "tt35014218",
       "type": "series",
       "name": "The Unaware Atelier Meister",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183133-SSeg5j1UrMDG.png",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist\nOne day, Kurt, a kind-hearted boy, is suddenly kicked out of the Hero's Party for being \"useless\". He finds that his aptitude for weapons, magic, and all other combat-related skills is the lowest rank, so he takes odd-jobs repairing the castle walls and digging for minerals to make a living, where his exceptional abilities are immediately revealed. He proves to be skillful in cooking, building, mining, crafting magical tools--in fact, his aptitude for every skill unrelated to combat had an SSS-ranking! Kurt, however, seems completely unaware to his talent and ends up saving people, the town, and even the country through his unaware actions!?<br>\n<br>\n(Source: Alpha Manga)<br><br>\n<i>Note: Each episode streams 7 days early on some streaming services. The original TV broadcast starts on April 6th, 2025.</i>"
+    },
+    {
+      "id": "tt35437675",
+      "type": "series",
+      "name": "Uma Musume: Cinderella Gray",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
+      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
     },
     {
       "id": "tt36270030",
@@ -246,18 +246,18 @@
       "description": "Genres: Comedy, Ecchi, Mecha, Romance, Sci-Fi\nTags:Seinen/Robots/Female Protagonist/Male Protagonist/Heterosexual\nThis risque romantic comedy story centers on Eita, an introvert mecha otaku high schooler who has a crush on the school's most popular girl Makina. When Eita finds Makina at her doorstep, he is flustered, and even more so when Makina reveals her secret: that she is a \"sexaroid\" robot designed for pleasure, and she is asking Eita to conduct some repairs on her discreetly. While Makina immediately tries to make a move on Eita physically, Eita struggles to contain himself, while also hiding her secret. <br><br>\n\n(Source: Anime News Network, edited)"
     },
     {
-      "id": "tt33332400",
-      "type": "series",
-      "name": "YAIBA: Samurai Legend",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177476-kduwwEfxcZtU.jpg",
-      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Shounen/Samurai/Male Protagonist/Animals\nThe protagonist, Yaiba (Kurogane Yaiba), is a wild samurai boy who trains in the jungle with his father, Kenjuro! By chance, Yaiba returns to Japan, where he meets his rival Takeshi Onimaru, who has the same samurai spirit as Yaiba, in a new training ground.\n<br><br>\nYaiba is living a life of serious competition, but when Onimaru obtains the “Legendary Demon Sword”, he is on a journey full of spectacle and great adventure...!<br><br>\n\n(Source: Crunchyroll News)"
-    },
-    {
       "id": "tt35437319",
       "type": "series",
       "name": "The Too-Perfect Saint: Tossed Aside by My Fiancé and Sold to Another Kingdom",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183275-WtAo77sYDFW8.png",
       "description": "Genres: Fantasy, Romance\nTags:Shoujo/Female Protagonist/Heterosexual\nPhilia’s family has produced saints for generations. It’s no surprise that she’s known as the greatest saint of all time—and set to marry the second prince, Julius. What no one expects is for Julius to call off the engagement, claiming that Philia’s perfection makes her charmless and unlikable. To add insult to injury, Philia is packed off to a neighboring country in exchange for gold and resources, forcing her to leave her homeland! Despite bracing herself for mistreatment, Philia finds a warm welcome in her new town, where she puts her saintly abilities to good use erecting barriers against monsters and curing epidemics. But even as she flourishes in her new life, her homeland is under threat of destruction!\n<br><br>\n(Source: Seven Seas Entertainment)"
+    },
+    {
+      "id": "tt33332400",
+      "type": "series",
+      "name": "YAIBA: Samurai Legend",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177476-kduwwEfxcZtU.jpg",
+      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Shounen/Samurai/Male Protagonist/Animals\nThe protagonist, Yaiba (Kurogane Yaiba), is a wild samurai boy who trains in the jungle with his father, Kenjuro! By chance, Yaiba returns to Japan, where he meets his rival Takeshi Onimaru, who has the same samurai spirit as Yaiba, in a new training ground.\n<br><br>\nYaiba is living a life of serious competition, but when Onimaru obtains the “Legendary Demon Sword”, he is on a journey full of spectacle and great adventure...!<br><br>\n\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt35508195",
