--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -151,15 +151,8 @@
       "id": "tt20672482",
       "type": "series",
       "name": "Moonrise",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx150654-AYFOHaZIQkCI.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx150654-pgima1BrY7N0.jpg",
       "description": "Genres: Action, Fantasy, Sci-Fi\nTags:CGI/Space/Male Protagonist\n In a not-too-distant future, humanity has established a loosely organized world government with everything managed by an international AI network called Sapientia. People live peaceful lives by loyally obeying its rational decisions. However, Sapientia’s lunar development project, which sends criminals and pollutants to the Moon to maintain Earth’s peace, creates disparity and poverty on the Moon, sparking a catalyst for war. Jacob \"Jack\" Shadow gets caught up in this conflict after losing his family to a terrorist bombing by the Moon's rebel army. Vowing revenge, Jack joins the Earth army as a scout on the Moon, only to discover an unexpected leader among the resistance forces. <br><br>\n(Source: Netflix)"
-    },
-    {
-      "id": "tt35636186",
-      "type": "series",
-      "name": "Black Butler: Emerald Witch Arc",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179054-HmN0Za4T157B.jpg",
-      "description": "Genres: Action, Comedy, Fantasy, Mystery, Supernatural\nTags:Butler/Shounen/Male Protagonist\nSequel to <i>Kuroshitsuji: Kishuku Gakkou-hen.</i><br><br>\n\nCiel and his loyal butler Sebastian brave a cursed forest in Germany to uncover the truth behind eerie deaths.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt35437763",
@@ -167,6 +160,13 @@
       "name": "Yandere Dark Elf: She Chased Me All the Way From Another World!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180829-jHViG8fIkaIJ.jpg",
       "description": "Genres: Comedy, Ecchi, Fantasy, Romance\nTags:Elf/Tanned Skin/MILF/Yandere/Nudity/Large Breasts/Male Protagonist/Heterosexual/Isekai\nHinata did it. He got reincarnated into another world, took up the mantle of Hero, and slew the dreaded Demon Lord alongside his party of fellow adventurers. As his reward, he’s returned to Earth to resume a normal life. Or it would be if it wasn’t for the fact that his dark elf companion Mariabelle decided to travel to Earth to come and live with him! Now she uses her arcane talents to ward off any potential romantic rivals and capture Hinata’s affection. \n<BR><BR>\n(Source: Seven Seas Entertainment)"
+    },
+    {
+      "id": "tt35636186",
+      "type": "series",
+      "name": "Black Butler: Emerald Witch Arc",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179054-HmN0Za4T157B.jpg",
+      "description": "Genres: Action, Comedy, Fantasy, Mystery, Supernatural\nTags:Butler/Shounen/Male Protagonist\nSequel to <i>Kuroshitsuji: Kishuku Gakkou-hen.</i><br><br>\n\nCiel and his loyal butler Sebastian brave a cursed forest in Germany to uncover the truth behind eerie deaths.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32513973",
@@ -183,6 +183,13 @@
       "description": "Genres: Drama, Music\nTags:Rock Music/Female Protagonist/Ojou-sama/Band/School/LGBTQ+ Themes/Seinen/Yuri\nAt an elite all-girls' academy where refined young ladies gather, Lilisa Suzunomiya, now the daughter of a real estate tycoon after her mother remarried, is forced to abandon her guitar and rock music to fit in. However, her passion is reignited by sounds from the old school building, where she meets a skilled drummer who shares her love for rock. Together, they embrace their inner rockstars, elegantly clashing and shouting their way through the academy in this captivating tale of grace and rebellion.\n<br><br>\n(Source: HIDIVE)"
     },
     {
+      "id": "kitsu:49069",
+      "type": "series",
+      "name": "Lycoris Recoil: Friends are thieves of time.",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-NvVrmMxnDatB.jpg",
+      "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Restaurant/Primarily Female Cast/Female Protagonist/Kuudere\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
+    },
+    {
       "id": "tt35636155",
       "type": "series",
       "name": "Apocalypse Hotel",
@@ -195,13 +202,6 @@
       "name": "Once Upon a Witch's Death",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178701-OA537qbje5AU.jpg",
       "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Primarily Female Cast/Magic/Witch/Curses\nOn her seventeenth birthday, the apprentice witch Meg learns that she only has one year left to live. Her teacher, the long-lived witch Faust, explains that the only way to undo the death curse is to collect tears of joy and grow the seed of life. To find them, Meg will have to leave the sheltered life she's always known and head out into the world. There will be meetings, partings, and friendships aplenty, and of course many tears. Meg will learn that the most important lessons for a witch are bright, sweet, and somewhat heart-wrenching.<br>\n<br>\n(Source: Yen Press) "
-    },
-    {
-      "id": "kitsu:49069",
-      "type": "series",
-      "name": "Lycoris Recoil: Friends are thieves of time.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-NvVrmMxnDatB.jpg",
-      "description": "Genres: Slice of Life\nTags:Restaurant/Cute Girls Doing Cute Things/Primarily Female Cast/Female Protagonist/Kuudere\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
     },
     {
       "id": "tt35436997",
@@ -229,7 +229,7 @@
       "type": "series",
       "name": "The Unaware Atelier Meister",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183133-SSeg5j1UrMDG.png",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist\nOne day, Kurt, a kind-hearted boy, is suddenly kicked out of the Hero's Party for being \"useless\". He finds that his aptitude for weapons, magic, and all other combat-related skills is the lowest rank, so he takes odd-jobs repairing the castle walls and digging for minerals to make a living, where his exceptional abilities are immediately revealed. He proves to be skillful in cooking, building, mining, crafting magical tools--in fact, his aptitude for every skill unrelated to combat had an SSS-ranking! Kurt, however, seems completely unaware to his talent and ends up saving people, the town, and even the country through his unaware actions!?<br>\n<br>\n(Source: Alpha Manga)<br><br>\n<i>Note: Each episode streams 7 days early on some streaming services. The original TV broadcast starts on April 6th, 2025.</i>"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist/Slapstick/Magic/Female Harem\nOne day, Kurt, a kind-hearted boy, is suddenly kicked out of the Hero's Party for being \"useless\". He finds that his aptitude for weapons, magic, and all other combat-related skills is the lowest rank, so he takes odd-jobs repairing the castle walls and digging for minerals to make a living, where his exceptional abilities are immediately revealed. He proves to be skillful in cooking, building, mining, crafting magical tools--in fact, his aptitude for every skill unrelated to combat had an SSS-ranking! Kurt, however, seems completely unaware to his talent and ends up saving people, the town, and even the country through his unaware actions!?<br>\n<br>\n(Source: Alpha Manga)<br><br>\n<i>Note: Each episode streams 7 days early on some streaming services. The original TV broadcast starts on April 6th, 2025.</i>"
     },
     {
       "id": "tt35437675",
@@ -309,18 +309,18 @@
       "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Food/Primarily Female Cast/Iyashikei/College\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
     },
     {
-      "id": "tt35437053",
-      "type": "series",
-      "name": "Chuuzenji-sensei Mononoke Kougiroku: Sensei ga Nazo wo Toiteshimau kara.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182419-6l9Cb3tNseZr.png",
-      "description": "Genres: Mystery, Psychological, Supernatural\nTags:Shounen/Historical\nOur setting is in Tokyo in 1948, just right after the war. Kanna Kusakabe had just become a second-year at a high school when she meets the new language teacher, Akihiko Chuuzenji.<br><br>\n\nMysterious supernatural things keep happening around Kanna. Once again today, Kanna is going to open the doors to the library prep room to seek help from the surly Chuuzenji-sensei who is waiting inside.<br><br>\n\nA high school supernatural mystery featuring the unlikely duo between a teacher and a high school girl is about to begin!<br><br>\n\n(Source: Pony Canyon, edited)"
-    },
-    {
       "id": "tt4561040",
       "type": "series",
       "name": "The Gorilla God’s Go-To Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182060-r0ihNqhiyvpT.jpg",
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Male Harem/Female Protagonist/Shoujo\nSophia, a timid daughter of a count, just wanted a peaceful life, but the Gorilla God had other plans. Blessed with unmatched strength, she’s thrust into the Royal Knight Order, turning her quiet days into chaos. Now, she must juggle school, the knight life, and her overwhelming power. Who knew gorilla strength could be so complicated?<br><br>\n\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt35437053",
+      "type": "series",
+      "name": "Chuuzenji-sensei Mononoke Kougiroku: Sensei ga Nazo wo Toiteshimau kara.",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182419-6l9Cb3tNseZr.png",
+      "description": "Genres: Mystery, Psychological, Supernatural\nTags:Shounen/Historical\nOur setting is in Tokyo in 1948, just right after the war. Kanna Kusakabe had just become a second-year at a high school when she meets the new language teacher, Akihiko Chuuzenji.<br><br>\n\nMysterious supernatural things keep happening around Kanna. Once again today, Kanna is going to open the doors to the library prep room to seek help from the surly Chuuzenji-sensei who is waiting inside.<br><br>\n\nA high school supernatural mystery featuring the unlikely duo between a teacher and a high school girl is about to begin!<br><br>\n\n(Source: Pony Canyon, edited)"
     },
     {
       "id": "tt35994065",
@@ -344,11 +344,11 @@
       "description": "Genres: Adventure, Sci-Fi\nTags:Robots/Environmental/CGI/Female Protagonist/Coming of Age/Dystopian\n<i>Confrontation and Harmony between Humans and Nature.</i>\n<br><br>\nIn the distant future, humans create a robot named MIRU capable of traveling through time, visiting various eras, places, and even parallel worlds.\n<br><br>\nUnlike some robots, MIRU isn't equipped with weapons. Instead, it helps people overcome immense obstacles peacefully, encouraging new beginnings without violence.\n<br><br>\nMIRU continuously evolves by interacting with people, learning and growing to assist those struggling to survive.\n<br><br>\nIt listens to their problems and offers support.\n<br><br>\nBy helping others, MIRU sets off a “Butterfly Effect”, of dramatic change guiding society toward a brighter future.\n<br><br>\nWhy was MIRU created? What is its purpose? Can it save the Earth and humanity from a dystopian future?\n<br><br>\n<i>\"The future is in our hands.\"</i>\n<br><br>\n(Official MIRU Site, edited)<br><br>\n<i>Contains:<br>\n1) Episode 079:「スターダストメモリー」 \"Stardust Memory\"<br>\n2) Episode 101: 「The King of the Forest」<br>\n3) Episode 217: 「この世の波風さわぎ」\"Londonderry Air\"<br>\n4) Episode 630: 「Re: MIRU」<br>\n5) Episode 926: 「待ってて、今行く」 \"Wait, I'll Be There\"</i>"
     },
     {
-      "id": "tt34853325",
+      "id": "tt33945275",
       "type": "series",
-      "name": "Princess-Session Orchestra",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178052-pzEAGk697GMM.png",
-      "description": "Genres: Mahou Shoujo, Music\nTags:Henshin/Magic/Female Protagonist\nThe anime takes place in Alicepia, which is a mysterious country that has existed since ancient times. The inhabitants of Alicepia, the Alicepians, are a fun-loving people, but one day mysterious monsters called Jamaock appeared to threaten the peace of Alicepia. The story follows a trio of \"princesses\" who never forget the song in their hearts, even when facing such danger and step up to save the day with the power of music. <br><br>\n\n(Source: Anime News Network, Crunchyroll News, edited)"
+      "name": "Koisuru ONE PIECE",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188668-rOB7rkgOz89w.jpg",
+      "description": "Genres: Comedy, Romance\nTags:Meta/Primarily Teen Cast/School Club\nThe premise of this spinoff is about three high school students: a young male student, his girlfriend and a third wheel who is a One Piece fanatic. Their names are similar to the Straw Hat Pirates and the group form a fan club dedicated to One Piece.\n<br><Br>\n(Source: One Piece Wiki)"
     }
   ]
 }
