--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -71,12 +71,22 @@
       "description": "Genres: Music\nTags:Idol/Ensemble Cast\nThe third movie in the UtaPri franchise, spotlighting the idol group QUARTET NIGHT."
     },
     {
-      "id": "tt1045574",
+      "id": "tt36551651",
+      "type": "movie",
+      "name": "Dragon Heart: Reikai Tanbouki",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186935-WPDw5KNiCSGb.png",
+      "behaviorHints": {
+        "defaultVideoId": "tt36551651"
+      },
+      "description": "Genres: Fantasy, Supernatural\nTags:\nnull"
+    },
+    {
+      "id": "tt30442574",
       "type": "movie",
       "name": "Dream Animals THE MOVIE",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b180124-kLrE636DrdKx.png",
       "behaviorHints": {
-        "defaultVideoId": "tt1045574"
+        "defaultVideoId": "tt30442574"
       },
       "description": "Genres: Action, Adventure, Fantasy\nTags:\nDream Animals biscuits, a long-selling snack beloved by Japanese since its launch in 1978 has been sold in more than 20 countries around the world and features the animal names written in English on the biscuits. The product has enjoyed an explosion in popularity in recent years as merchandise, especially among young people. Now for the first time, the product is given treatment as an animated movie called Dream Animals: The Movie. How will these animal biscuit characters behave and sound as they embark upon a thrilling adventure while tugging at your heartstrings with endearingly rich personalities.\n<br><br>\n(Source: TBS)"
     }
