Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -1,12 +1,12 @@
 {
   "metas": [
     {
-      "id": "kitsu:49215",
+      "id": "tt36592985",
       "type": "movie",
       "name": "Kobayashi-san Chi no Maidragon Samishii Gariya no Ryuu",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181839-pgM02tCNM2ae.png",
       "behaviorHints": {
-        "defaultVideoId": "kitsu:49215"
+        "defaultVideoId": "tt36592985"
       },
       "description": "Genres: Fantasy, Slice of Life\nTags:Dragons/Seinen/Maids/Found Family/Female Protagonist\n<i>\"I don’t want to let go of her hand. Because, we are a family.\"</i>\n<br><br>\nTheatrical follow-up to the second season <i>Kobayashi-san Chi no Maidragon S</i> and <i>Kobayashi-san Chi no Maidragon S: Nippon no Omotenashi (Attend wa Dragon desu)</i> OVA.<br><br>\n\n(Source: Kyoto Animation YouTube Channel)"
     },
