Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -26,7 +26,7 @@
       "type": "series",
       "name": "WIND BREAKER Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178680-nIAhCizY46ZU.jpg",
-      "description": "Genres: Action, Comedy, Drama\nTags:Delinquents/Gangs/Tsundere/Found Family/Shounen/Primarily Male Cast/Primarily Teen Cast/Male Protagonist/Urban/LGBTQ+ Themes/Transgender/CGI/Bullying\nThe second season of <i>WIND BREAKER</i>.<br><br>\n\nWelcome back to Furin High School, an institution infamous for its population of brawny brutes who solve every conflict with a show of strength. Some of the students even formed a group, Bofurin, which protects the town. Haruka Sakura, a first-year student who moved in from out of town, is only interested in one thing: fighting his way to the top! <br><br>\n\n(Source: Crunchyroll, edited)"
+      "description": "Genres: Action, Comedy, Drama\nTags:Delinquents/Gangs/Shounen/Found Family/Primarily Male Cast/Tsundere/Primarily Teen Cast/Male Protagonist/Urban/Transgender/CGI/Bullying/LGBTQ+ Themes\nThe second season of <i>WIND BREAKER</i>.<br><br>\n\nWelcome back to Furin High School, an institution infamous for its population of brawny brutes who solve every conflict with a show of strength. Some of the students even formed a group, Bofurin, which protects the town. Haruka Sakura, a first-year student who moved in from out of town, is only interested in one thing: fighting his way to the top! <br><br>\n\n(Source: Crunchyroll, edited)"
     },
     {
       "id": "tt33165027",
@@ -40,14 +40,14 @@
       "type": "series",
       "name": "KOWLOON GENERIC ROMANCE",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182814-UTKRUUm7Jah5.jpg",
-      "description": "Genres: Drama, Mystery, Romance, Sci-Fi, Slice of Life\nTags:Female Protagonist/Heterosexual/Dystopian/Primarily Adult Cast/Urban/Office Lady/Seinen/Male Protagonist/Food/Nudity/Historical/LGBTQ+ Themes\nWelcome to Kowloon Walled City: a dystopian townscape where the people are brimming with nostalgia, and where the past, present, and future converge. Amid the hidden emotions and extraordinary daily lives of the men and women working in its confines, a tale of romance begins to unfold for real estate agent Reiko Kujirai—one that feels as familiar as Kowloon itself… \n<br><br>\n(Source: Yen Press) "
+      "description": "Genres: Drama, Mystery, Romance, Sci-Fi, Slice of Life\nTags:Female Protagonist/Heterosexual/Dystopian/Primarily Adult Cast/Urban/Office Lady/Seinen/Male Protagonist/Food/Historical/Nudity/LGBTQ+ Themes\nWelcome to Kowloon Walled City: a dystopian townscape where the people are brimming with nostalgia, and where the past, present, and future converge. Amid the hidden emotions and extraordinary daily lives of the men and women working in its confines, a tale of romance begins to unfold for real estate agent Reiko Kujirai—one that feels as familiar as Kowloon itself… \n<br><br>\n(Source: Yen Press) "
     },
     {
       "id": "tt35636246",
       "type": "series",
       "name": "My Hero Academia: Vigilantes",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185736-Ci6AiGwjKKtp.jpg",
-      "description": "Genres: Action, Adventure, Drama, Fantasy\nTags:Urban/Super Power/Crime/Superhero/Fugitive/Male Protagonist/Shounen/Idol\nKouichi Haimawari is a dull college student who aspires to be a hero but has given up on his dream. Although 80% of the world’s population has superhuman powers called Quirks, few are chosen to become heroes and protect people. Everything changes for Kouichi when he and Pop☆Step are saved by the vigilante Knuckleduster and get recruited to become vigilantes themselves!\n<br><br>\n(Source: Crunchyroll) "
+      "description": "Genres: Action, Adventure, Drama, Fantasy\nTags:Urban/Super Power/Superhero/Crime/Fugitive/Male Protagonist/Shounen/Idol\nKouichi Haimawari is a dull college student who aspires to be a hero but has given up on his dream. Although 80% of the world’s population has superhuman powers called Quirks, few are chosen to become heroes and protect people. Everything changes for Kouichi when he and Pop☆Step are saved by the vigilante Knuckleduster and get recruited to become vigilantes themselves!\n<br><br>\n(Source: Crunchyroll) "
     },
     {
       "id": "tt13248062",
@@ -96,7 +96,7 @@
       "type": "series",
       "name": "KONOSUBA -God's Blessing on This Wonderful World! 3 -BONUS STAGE-",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181244-ICHU0FzIhEAY.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy\nTags:Ensemble Cast/Chuunibyou/Primarily Female Cast/Isekai/Male Protagonist/Medieval/Gods\nAnnounced during the Konosuba Radio public recording special: OVA episodes for the third season of <i>Kono Subarashii Sekai ni Shukufuku wo!</i><br><br>\n<b>Episodes:</b><br>\n\n1) <b><i>Redstream Explosion!</i></b><br>\nWhile Kazuma and his mates are having dinner at the guild, Luna, a receptionist, brings them a request. They need Megumin's explosion spell to face a typhoon approaching the city of Axel. Yunyun and Wiz also decide to participate, and the morale of the adventurers soars! On the day of the decisive battle, Kazuma sees the adventurers preparing for battle, and is surprised to find that they were all...<br><br>\n\n2) <b><i>Nisemono Chuui! (Beware of imposters!)</b></i><br>\nOne winter day. While Kazuma was enjoying a grilled skewer at a food stall in the town of Axel, an adventurer approached him. The man said he was looking for an adventurer named “Kazuma Satou.\" In exchange for dinner, Kazuma told them the legend of “Kazuma Satou,” which moved the man and his party of three female adventurers to tears...\n\n<br><br>(Source: Crunchyroll News, edited) <br><br>\n<i>Note: The anime was pre-screened in Japan theatrically for 2 weeks starting on March 14, 2025.</i>"
+      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy\nTags:Ensemble Cast/Chuunibyou/Primarily Female Cast/Medieval/Isekai/Gods/Male Protagonist\nAnnounced during the Konosuba Radio public recording special: OVA episodes for the third season of <i>Kono Subarashii Sekai ni Shukufuku wo!</i><br><br>\n<b>Episodes:</b><br>\n\n1) <b><i>Redstream Explosion!</i></b><br>\nWhile Kazuma and his mates are having dinner at the guild, Luna, a receptionist, brings them a request. They need Megumin's explosion spell to face a typhoon approaching the city of Axel. Yunyun and Wiz also decide to participate, and the morale of the adventurers soars! On the day of the decisive battle, Kazuma sees the adventurers preparing for battle, and is surprised to find that they were all...<br><br>\n\n2) <b><i>Nisemono Chuui! (Beware of imposters!)</b></i><br>\nOne winter day. While Kazuma was enjoying a grilled skewer at a food stall in the town of Axel, an adventurer approached him. The man said he was looking for an adventurer named “Kazuma Satou.\" In exchange for dinner, Kazuma told them the legend of “Kazuma Satou,” which moved the man and his party of three female adventurers to tears...\n\n<br><br>(Source: Crunchyroll News, edited) <br><br>\n<i>Note: The anime was pre-screened in Japan theatrically for 2 weeks starting on March 14, 2025.</i>"
     },
     {
       "id": "tt35331428",
@@ -138,7 +138,7 @@
       "type": "series",
       "name": "Rock is a Lady’s Modesty",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179694-7zhc0T6IImor.jpg",
-      "description": "Genres: Drama, Music\nTags:Female Protagonist/Ojou-sama/Band/Rock Music/School/Yuri/Bullying/LGBTQ+ Themes/CGI/Seinen/Urban/Primarily Female Cast/Primarily Teen Cast\nAt an elite all-girls' academy where refined young ladies gather, Lilisa Suzunomiya, now the daughter of a real estate tycoon after her mother remarried, is forced to abandon her guitar and rock music to fit in. However, her passion is reignited by sounds from the old school building, where she meets a skilled drummer who shares her love for rock. Together, they embrace their inner rockstars, elegantly clashing and shouting their way through the academy in this captivating tale of grace and rebellion.\n<br><br>\n(Source: HIDIVE)"
+      "description": "Genres: Drama, Music\nTags:Ojou-sama/Female Protagonist/Rock Music/Band/School/Yuri/Bullying/LGBTQ+ Themes/CGI/Seinen/Urban/Primarily Female Cast/Primarily Teen Cast\nAt an elite all-girls' academy where refined young ladies gather, Lilisa Suzunomiya, now the daughter of a real estate tycoon after her mother remarried, is forced to abandon her guitar and rock music to fit in. However, her passion is reignited by sounds from the old school building, where she meets a skilled drummer who shares her love for rock. Together, they embrace their inner rockstars, elegantly clashing and shouting their way through the academy in this captivating tale of grace and rebellion.\n<br><br>\n(Source: HIDIVE)"
     },
     {
       "id": "tt20672482",
@@ -173,7 +173,7 @@
       "type": "series",
       "name": "Once Upon a Witch's Death",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178701-OA537qbje5AU.jpg",
-      "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Primarily Female Cast/Witch/Curses/Magic/Urban Fantasy/Foreign/Feet/Environmental\nOn Meg’s seventeenth birthday, she learns that she only has one year left to live. Her mentor—the Eternal Witch, Faust—explains that she is cursed and the only way to save herself is to grow a seed of life using one thousand tears of joy. Of course, such tears aren’t easy to come by. As Meg begins her quest, she finds herself drawn into the lives of her friends and neighbors in ways she never imagined. By sharing their burdens and using her magic to comfort them, she learns how precious those moments of connection can be even in the face of death.<br>\n<br>\n(Source: Yen Press) "
+      "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Primarily Female Cast/Witch/Curses/Magic/Urban Fantasy/Foreign/Feet/Environmental/Episodic\nOn Meg’s seventeenth birthday, she learns that she only has one year left to live. Her mentor—the Eternal Witch, Faust—explains that she is cursed and the only way to save herself is to grow a seed of life using one thousand tears of joy. Of course, such tears aren’t easy to come by. As Meg begins her quest, she finds herself drawn into the lives of her friends and neighbors in ways she never imagined. By sharing their burdens and using her magic to comfort them, she learns how precious those moments of connection can be even in the face of death.<br>\n<br>\n(Source: Yen Press) "
     },
     {
       "id": "tt32513973",
@@ -222,7 +222,7 @@
       "type": "series",
       "name": "A Ninja and an Assassin Under One Roof",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177120-xRucIg2WDr77.png",
-      "description": "Genres: Comedy\nTags:Female Protagonist/Slapstick/Cute Girls Doing Cute Things/Yuri/Ninja/Assassins/Surreal Comedy/Fugitive/Urban/Yandere/Primarily Female Cast/LGBTQ+ Themes/School/Shounen\nOn the way home from school one day, Konoha Koga rescues Satoko Kusagakure, a ninja who escaped her village. Soon, pursuers from the village show up in search of Satoko only to be deftly dealt with by Konoha. As it turns out, the unassuming high schooler is actually an assassin. Thus, the potentially cutthroat cohabitation of a ninja and an assassin begins!\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy\nTags:Female Protagonist/Slapstick/Ninja/Assassins/Cute Girls Doing Cute Things/Surreal Comedy/Fugitive/Yuri/Urban/Primarily Female Cast/Yandere/LGBTQ+ Themes/School/Shounen\nOn the way home from school one day, Konoha Koga rescues Satoko Kusagakure, a ninja who escaped her village. Soon, pursuers from the village show up in search of Satoko only to be deftly dealt with by Konoha. As it turns out, the unassuming high schooler is actually an assassin. Thus, the potentially cutthroat cohabitation of a ninja and an assassin begins!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36270030",
@@ -243,7 +243,7 @@
       "type": "series",
       "name": "mono",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176246-ndH8bKh7cmzf.jpg",
-      "description": "Genres: Comedy, Slice of Life\nTags:Photography/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Teen Cast/School/Iyashikei/Primarily Female Cast/Animals/Urban/Drawing/Food/Meta/LGBTQ+ Themes/Motorcycles\nThe <i>mono</i> manga is centered around high school girls who belong to the Cinephoto Club, which is a combination photography club and video research club set around Kofu City, Yamanashi Prefecture. The girls go about their daily lives using cameras tied to kites, action cameras and even drones around the city and prefecture. <br><br> (Source: Crunchyroll News, edited)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Photography/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Teen Cast/School/Iyashikei/Primarily Female Cast/Animals/Urban/Drawing/Food/Meta/LGBTQ+ Themes/Motorcycles\nSatsuki Amamiya was feeling down due to the graduation of the high school Photography Club’s president. However, her best friend and fellow member An Kiriyama encourages Satsuki to dedicate herself to the newly merged Cinephoto Club. Join Satsuki and An as they set out to track down a missing camera, meet new faces, and capture stunning photos and videos along the way. <br><br> (Source: Crunchyroll)"
     },
     {
       "id": "tt35437780",
@@ -299,7 +299,7 @@
       "type": "series",
       "name": "GUILTY GEAR STRIVE: DUAL RULERS",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178046-4EeU8cC3WJOs.jpg",
-      "description": "Genres: Action, Sci-Fi\nTags:Full CGI/Post-Apocalyptic/Magic/Super Power/LGBTQ+ Themes/Samurai/Demons/Coming of Age\nSin Kiske, the forbidden child of a human and a magically crafted biological weapon called a Gear, lives in a world where magic has replaced science, and scars from the Gear rebellion remain. Attending his parents’ taboo-breaking wedding, he encounters a mysterious girl with deep hatred for Gears, and their fateful meeting threatens to upend the world once again.<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Sci-Fi\nTags:Full CGI/Post-Apocalyptic/Magic/Super Power/Conspiracy/LGBTQ+ Themes/Samurai/Demons/Coming of Age\nSin Kiske, the forbidden child of a human and a magically crafted biological weapon called a Gear, lives in a world where magic has replaced science, and scars from the Gear rebellion remain. Attending his parents’ taboo-breaking wedding, he encounters a mysterious girl with deep hatred for Gears, and their fateful meeting threatens to upend the world once again.<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32514593",
