Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -48,7 +48,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36583287"
       },
-      "description": "Genres: Comedy, Slice of Life\nTags:Maids/Shounen/Robots\nTheatrical follow-up to <i>Boku to Roboco</i>."
+      "description": "Genres: Comedy, Slice of Life\nTags:Robots/Shounen/Maids\nTheatrical follow-up to <i>Boku to Roboco</i>."
     },
     {
       "id": "tt35652362",
@@ -89,6 +89,16 @@
         "defaultVideoId": "tt1045574"
       },
       "description": "Genres: Action, Adventure, Fantasy\nTags:\nDream Animals biscuits, a long-selling snack beloved by Japanese since its launch in 1978 has been sold in more than 20 countries around the world and features the animal names written in English on the biscuits. The product has enjoyed an explosion in popularity in recent years as merchandise, especially among young people. Now for the first time, the product is given treatment as an animated movie called Dream Animals: The Movie. How will these animal biscuit characters behave and sound as they embark upon a thrilling adventure while tugging at your heartstrings with endearingly rich personalities.\n<br><br>\n(Source: TBS)"
+    },
+    {
+      "id": "tt28664733",
+      "type": "movie",
+      "name": "Lost in Starlight",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b192002-3QLggjTtpSPy.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt28664733"
+      },
+      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Heterosexual/Space Opera\nWhen an astronaut leaves Earth for Mars, the vast infinite space divides star-crossed lovers in this animated romance that crosses the cosmos.<br><br>\n\n(Source: Netflix)"
     }
   ]
 }
